--- a/css/master.css
+++ b/css/master.css
@@ -229,23 +229,30 @@ body {
 
 .author_content {
   position: fixed;
+  top: 0;
+  left: 0;
 
   width: 100%;
-  margin-top: calc(-50vh - 1px);
   height: 50vh;
   background-color: #000;
   overflow: hidden;
   z-index: 99999;
 
-  -webkit-transition: margin-top 500ms;
-  -moz-transition: margin-top 500ms;
-  -ms-transition: margin-top 500ms;
-  -o-transition: margin-top 500ms;
-  transition: margin-top 500ms;
+  /* 처음에는 안 보이게 */
+  opacity: 0;
+  pointer-events: none;
+
+  -webkit-transition: opacity 400ms ease;
+  -moz-transition: opacity 400ms ease;
+  -ms-transition: opacity 400ms ease;
+  -o-transition: opacity 400ms ease;
+  transition: opacity 400ms ease;
 }
 
 .authorcontentshowhide {
-  margin-top: 0vh;
+  /* 클릭 시 페이드 인 */
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .preinner_author_content {
@@ -564,399 +571,6 @@ p.title_menu:after {
   -o-transition: none !important;
   -ms-transition: none !important;
   transition: none !important;
-}
-
-/** CSS PAGES **/
-
-.page-prewrapper {
-  position: fixed;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  z-index: 2;
-  overflow-y: auto;
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
-  -webkit-transition-timing-function: ease-in;
-  transition-timing-function: ease-in;
-}
-
-.page-wrapper {
-  position: relative;
-  display: block;
-  float: left;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-}
-
-.page-text {
-  position: relative;
-  display: block;
-  float: left;
-  width: 100%;
-  height: auto;
-  padding-top: 2vh;
-  padding-bottom: calc(2vh + 0.3vw);
-  background-color: #fff;
-  z-index: 9;
-}
-
-.page-text p {
-  font-size: 0.75em;
-  line-height: 125%;
-  letter-spacing: 0.025em;
-}
-
-.page-image-wrapper {
-  position: relative;
-  display: block;
-  float: left;
-  width: 100%;
-  height: auto;
-}
-
-.image-frame-wrapper {
-  position: relative;
-  display: block;
-  float: left;
-  width: 100%;
-  height: 100%;
-}
-
-.image-landscape {
-  position: relative;
-  display: block;
-  float: left;
-  width: 100%;
-  height: 66.67vw;
-  z-index: 2;
-}
-
-.image-landscape-a {
-  position: relative;
-  display: block;
-  float: left;
-  width: 100%;
-  height: 66.67vw;
-  z-index: 2;
-}
-
-.image-landscape-p6-fixed {
-  height: 100vh;
-}
-
-.image-landscape-portrait {
-  position: relative;
-  display: block;
-  float: left;
-  width: 50%;
-  height: 66.67vw;
-  z-index: 2;
-}
-
-.image-landscape-portrait-a {
-  position: relative;
-  display: block;
-  float: left;
-  width: 50%;
-  height: 66.67vw;
-  z-index: 2;
-}
-
-.image-portrait {
-  position: relative;
-  display: block;
-  float: left;
-  width: 100%;
-  height: 150vw;
-  z-index: 2;
-}
-
-.image-landscape-void {
-  width: 80%;
-  height: 100vh !important;
-  margin-left: 10%;
-}
-
-.image-landscape img,
-.image-portrait img,
-.image-fixed-background img {
-  position: relative;
-  display: block;
-  float: left;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.image-pointer-events-none {
-  position: relative;
-  display: block;
-  float: left;
-  width: 100%;
-  height: 100vh;
-  pointer-events: none;
-}
-
-#wrappercontainermenu.height-content {
-  position: absolute;
-  width: 1px;
-  height: 4000vh;
-  left: -999;
-  top: -10000;
-}
-
-/* PAGE 2 FIJI */
-
-div.image-fiji div.image-landscape,
-div.image-fiji div.image-portrait {
-  width: 80%;
-  margin-left: 10%;
-  padding-bottom: 10vw;
-}
-div.image-fiji div.image-landscape {
-  height: 53.34vw;
-}
-div.image-fiji div.image-portrait {
-  height: 120vw;
-}
-div.image-fiji div.image-landscape:first-child {
-  padding-top: 10vw;
-}
-div.image-fiji div.image-landscape:last-child {
-  margin-top: -10vw !important;
-  padding-bottom: 0;
-}
-
-div.video-fixed-background {
-  position: fixed;
-  width: 100%;
-  height: calc(100vh + 150px);
-  top: -75px;
-  left: 0;
-  z-index: 1;
-  overflow: hidden;
-}
-
-.video-frame {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-div.page-text.fiji-text p {
-  width: calc(37.5% - 2vh);
-  max-width: 700px;
-  margin-left: 50%;
-  height: auto;
-}
-
-/* PAGE 3 INSTITUTIONAL PAINTINGS */
-
-.institutional-img1 {
-  height: 40vw !important;
-  width: 60% !important;
-  margin-left: 33.25% !important;
-}
-.institutional-img2 {
-  height: 45vw !important;
-  width: 70% !important;
-  margin-left: 15% !important;
-}
-
-/* PAGE 4 HYPERSELF */
-
-/* PAGE 5 IMAGE REVISED */
-
-div.image-fixed-background {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  overflow: hidden;
-}
-
-div.image-image-revised div.image-landscape,
-div.image-image-revised div.image-portrait {
-  width: 100%;
-  margin-left: 0;
-  padding-bottom: 10vw;
-}
-div.image-image-revised div.image-landscape:first-child {
-  padding-top: 10vw;
-}
-div.image-image-revised div.image-landscape:last-child {
-  margin-top: -10vw !important;
-  padding-bottom: 0;
-}
-
-/* PAGE 9 REMOTE */
-div.image-remote div.image-portrait:first-child {
-  padding-top: 10vw;
-}
-
-/* PAGE 10 I TURNED AROUND */
-
-.collapsible-title {
-  position: relative;
-  display: flex;
-  float: left;
-  width: 100vw;
-  height: 33.333333vh;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.collapsible-title:hover {
-  background-color: #e0e0e0;
-}
-
-.collapsible-title h5 {
-  font-size: calc(3vw * 1.5);
-  text-align: center;
-  -webkit-transform: skew(-41deg);
-  -moz-transform: skew(-41deg);
-  -ms-transform: skew(-41deg);
-  -o-transform: skew(-41deg);
-  transform: skew(-41deg);
-  z-index: 9999;
-
-  -webkit-transition-property: transform;
-  -moz-transition-property: transform;
-  -ms-transition-property: transform;
-  -o-transition-property: transform;
-  transition-property: transform;
-
-  -webkit-transition-duration: 500ms;
-  -moz-transition-duration: 500ms;
-  -ms-transition-duration: 500ms;
-  -o-transition-duration: 500ms;
-  transition-duration: 500ms;
-}
-
-.toggle-content-border-top {
-  position: absolute;
-  display: block;
-  top: -0.15vw;
-  left: 0;
-  width: 100%;
-  height: 0.3vw;
-  background-color: #000;
-  z-index: 999;
-}
-
-.toggle-content-border-bottom {
-  position: absolute;
-  display: block;
-  bottom: -0.15vw;
-  left: 0;
-  width: 100%;
-  height: 0.3vw;
-  background-color: #000;
-  z-index: 999;
-}
-
-.toggle-content-border-bottom-last {
-  bottom: 0;
-}
-
-.collapsible-content {
-  width: 100%;
-  height: auto;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 500ms ease-out;
-}
-
-div.page-csm div.image-landscape {
-  width: 80%;
-  height: 53.34vw;
-  margin-left: 0;
-  padding-right: 20%;
-}
-
-div.page-cybersensuality div.image-landscape {
-  width: 80%;
-  height: 53.34vw;
-  margin-left: 0;
-  padding-left: 20%;
-}
-
-div.page-cybersensuality div.image-portrait {
-  width: 80%;
-  height: 120vw;
-  margin-left: 0;
-  padding-left: 20%;
-}
-
-div.page-lockers div.image-portrait {
-  width: 80%;
-  height: 120vw;
-  margin-left: 0;
-  padding-left: 10%;
-  padding-right: 10%;
-}
-
-/* PAGE 11 TURN LEFT ON SUPERNOVA */
-
-.video-relative-landscape {
-  position: relative;
-  display: block;
-  float: left;
-  width: 100%;
-  height: 100vh;
-  z-index: 2;
-  overflow: hidden;
-}
-
-.video-inner-wrap {
-  position: relative;
-  /*
-	min-width:180vh;
-	margin-left:50%;
-	-webkit-transform:translate(-50%, 0);
-	*/
-  width: calc(100vw + 80px);
-  height: calc(100vh + 150px);
-  top: -75px;
-  left: -40px;
-  overflow: hidden;
-}
-
-div.page-text.link-text p {
-  width: calc(70% - 2vh);
-  margin-left: 2vh;
-  height: auto;
-}
-
-/* STEDELIJK */
-
-.stedelijk-videowrapper {
-  position: relative;
-  float: left;
-  clear: both;
-  width: 100%;
-  height: 100vh;
-}
-
-.video-1-3-inner-wrap {
-  position: relative;
-  float: left;
-  clear: right;
-  width: 33.33333%;
-  height: 100vh;
-}
-
-.video-frame-stedeljk {
-  width: 100%;
-  height: 100%;
 }
 
 /** MEDIA QUERRIES - RESPONSIVE **/
