--- a/css/master.css
+++ b/css/master.css
@@ -322,7 +322,7 @@ body {
   line-height: 180%;
   letter-spacing: 0.03em;
   margin-bottom: 2vh;
-  text-align: justify;
+  text-align: left;
   color: #fff;
   text-shadow: 0 0 8px rgba(255, 255, 255, 0.6),
     0 0 15px rgba(255, 255, 255, 0.4);
